Update to correct issue with Footer whitespace

--- a/src/components/EditCoursePage/CollapsibleCourseRun.scss
+++ b/src/components/EditCoursePage/CollapsibleCourseRun.scss
@@ -1,3 +1,7 @@
-.collapsible-body {
-  overflow: visible !important;
+.course-run-collapsible {
+  .collapsible-body {
+    &.open {
+      overflow: visible;
+    }
+  }
 }
